--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     padding-bottom: 100%;
 }
 
-.seconde {
+#seconde {
     width: 40%;
     height: 1px;
     background-color: black;
@@ -36,19 +36,19 @@
     -moz-transform-origin: left;
     -webkit-transform-origin: left;
     transform-origin: left;
-    -moz-animation: 60s secondes infinite;
+    /*-moz-animation: 60s secondes infinite;
     -webkit-animation: 60s secondes infinite;
     animation: 60s secondes infinite;
     -moz-animation-timing-function: steps(60, end);
     -webkit-animation-timing-function: steps(60, end);
-    animation-timing-function: steps(60, end);
+    animation-timing-function: steps(60, end);*/
     position: absolute;
     left: 50%;
     top: 50%;
     z-index: 3;
 }
 
-.seconde::before {
+#seconde::before {
     content: '';
     width: 17%;
     height: 1px;
@@ -57,7 +57,7 @@
     background-color: black;
 }
 
-.minute {
+#minute {
     width: 35%;
     height: 3px;
     background-color: grey;
@@ -77,7 +77,7 @@
     z-index: 2;
 }
 
-.minute::before {
+#minute::before {
     content: '';
     width: 20%;
     height: 3px;
@@ -86,7 +86,7 @@
     background-color: gray;
 }
 
-.heure {
+#heure {
     width: 27%;
     height: 5px;
     background-color: darkgray;
@@ -103,7 +103,7 @@
     z-index: 1;
 }
 
-.heure::before {
+#heure::before {
     content: '';
     width: 27%;
     height: 5px;
