--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,9 @@
 [class*="letter"] span {
     display: block;
     transform-origin: 42% 53%;
+    -ms-transform-origin: 42% 53%;
+    -moz-transform-origin: 42% 53%;
+    -webkit-transform-origin: 42% 53%;
     text-align: center;
     font-size: min(15vw, 1em);
 }
